tests/errors/syntax/type-unclosed.fn
---
Description: Type with opening brace but no close
Expected: FN1018
---

type Broken
{

type Program
{
    fn Main -> i32
    {
        return 0
    }
}
